--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.27.2
 environ==1.0
+gunicorn==23.0.0
 idna==3.7
 inflection==0.5.1
 itypes==1.2.0
@@ -20,6 +21,7 @@ jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
 MarkupSafe==2.1.5
 openapi-codec==1.3.2
+packaging==24.1
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
 PyYAML==6.0.1
